# alphacopilot

./: .dockerignore  .env.example  .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  PR_REFINEMENT_SUMMARY.md  README.md  SECURITY-CHECKLIST.md  SECURITY.md  SUPPORT.md  env.local.template  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
agent/: AGENTS.md  IDENTITY.md  SOUL.md
config/: square_diary.json
docs/: INDEX.md  api-deployment-review.md  architecture-diagram.md  architecture.md  binance-careers.md  binance-skills-architecture-summary.md  binance-square-posting.md  build-checklist.md  challenge-package.md  checks-reference.md  cleanup-audit.md  code-quality-notes.md  command-architecture.md  command-upgrade-order.md  commands-overview.md  competition-week-checklist.md  contest-strategy.md  contributor-notes.md  credits.md  current-checklist.md  current-demo-guide.md  current-next-steps.md  current-public-copy.md  deep-check.md  demo-assets-plan.md  demo-checklist.md  demo-operator-sheet.md  demo-script.md  deployment.md  developer-flow.md  enhancement-blueprint.md  error-handling.md  example-usage.md  fallback-messaging.md  faq.md  final-demo-narration.md  final-engineering-note.md  final-hand-off.md  final-public-release-check.md  final-release-checklist.md  (+81 more)
examples/: README.md  current-output-examples.md  signal-example.md  token-example.md  wallet-example.md  watchtoday-example.md
scripts/: README.md  bridge_contract_example.json  check_all.sh  demo_capture.sh  export_examples.sh  (+8 more)
(+170 files in other folders)
