[project]
name = "bibipilot"
version = "0.1.0"
description = "Signal-and-risk research copilot built around OpenClaw and Binance Skills Hub"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dara" }
]

[tool.bibipilot]
product_name = "Bibipilot"
short_name = "Bibipilot"
tagline = "Less noise. Better conviction."
