[project]
name = "bibipilot"
version = "0.2.1"
description = "Production-first crypto research, posture, and Binance Square publishing copilot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dara" }
]

[tool.bibipilot]
product_name = "Bibipilot"
short_name = "Bibipilot"
tagline = "Less noise. Better conviction."
